# Laba_1

./: CMakeLists.txt  main.cpp
libraries/: Enter.h  Gauss.h  Matrix.h  enter.cpp  gauss.cpp  matrix.cpp
